--- a/network/docker-compose.yml
+++ b/network/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "--entryPoints.websecure.address=:443"
       - "--providers.docker=false"  # No Docker provider
       - "--certificatesResolvers.myresolver.acme.httpChallenge.entryPoint=web"  # ACME HTTP challenge for Let's Encrypt
-      - "--certificatesResolvers.myresolver.acme.email=atombrot@example.com"  # Replace with your email
+      - "--certificatesResolvers.myresolver.acme.email=atombrot@gmail.com"  # Replace with your email
       - "--certificatesResolvers.myresolver.acme.storage=/etc/traefik/acme.json"  # Storage for certificates
     ports:
       - "80:80"   # HTTP
