--- a/network/docker-compose.yml
+++ b/network/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"  # Allow Traefik to interact with Docker (optional)
       - "./traefik/acme.json:/etc/traefik/acme.json"  # Persistent storage for certificates
+      - "./traefik.toml:/etc/traefik/traefik.toml"
     labels:
       - "traefik.enable=true"
     extra_hosts:
