--- a/network/traefik/dynamic_conf.toml
+++ b/network/traefik/dynamic_conf.toml
@@ -7,7 +7,7 @@ middlewares = ["https-redirect"]
 [http.routers.librarianDev]
 entryPoints = ["websecure"]
 rule = "Host(`librarian.dev.next.brausen.services`)"
-service = "libraryDev-service"
+service = "librarianDev-service"
 middlewares = ["https-redirect"]
 
 [http.routers.libraryDev.tls]
